# SysdarftDebuggerFrontend

./: README.md
Sysdarft/: CMakeLists.txt  dialogconnect.cpp  dialogconnect.h  dialogconnect.ui  dialogwarning.cpp  dialogwarning.h  dialogwarning.ui  main.cpp  sysdarft.cpp  sysdarft.h  sysdarft.ui
